recomendaciones, algo de css de forms

--- a/intranet/htdocs/intranet-tmpl/adquisiciones/detalle_recomendacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/adquisiciones/detalle_recomendacion.tmpl
@@ -1,4 +1,12 @@
- <div class="detalle_recom">
+<script type="text/javascript">
+
+    $(document).ready(function() {
+        zebra('detalle_recom');         
+     });
+
+</script>
+
+<div id="detalle_recom" class="detalle_recom">
   <fieldset id="datos_recomendacion">
       <div class="contenedor_paginador">[% paginador %]</div>
       <legend class="titulo_legend">[% "Detalle de Recomendacion" | i18n %]</legend>
