--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/completo.css
@@ -447,6 +447,7 @@ body {
 
 .sub_item label {
 	display: block;
+    margin-top: 10px;
 	float: left;
 	margin-right: 13px;
 	padding-right: 10px;
@@ -454,6 +455,16 @@ body {
 	text-align: right;
 	width: 36%;
 	font-size: 12px
+}
+
+.sub_item input[type="radio"]{
+  margin-top:10px;
+
+}
+
+.sub_item input[type="checkbox"]{
+  margin-top:11px;
+
 }
 
 .titulo_tabla {
@@ -4810,13 +4821,29 @@ a {
 
 /* DESDE ACA */
 
+#titulo_detalle_rec{
+  border-radius: 5px 5px 5px 5px;
+  background-color:#fff;
+  
+
+}
+
 .div_detalle_recom{
   color:#111;
   border-radius: 5px 5px 5px 5px;
-  background-color:#fff;
+    background-color:#fff;
 
+}
 
+.div_detalle_recom p{
+    font-weight:bold;
+    margin-left:10px;
+    border-radius: 5px 5px 5px 5px;
 
+}
+
+.div_detalle_recom p span{
+    font-weight:lighter;
 }
 
 #fancybox-outer{
