--- a/intranet/htdocs/intranet-tmpl/temas/DEO/includes/forms.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DEO/includes/forms.css
@@ -15,6 +15,7 @@
 	padding: 5px;
     font-family: verdana;
 	margin: 0px 0px 10px 0px;
+    margin-top:5px;
 	border: 2px solid #ccc;
     font-size:12px;  
 	max-width: 300px;
@@ -48,7 +49,7 @@ textarea:focus,  input:focus {
 	margin-right: 15px;
 	width: 149px;
 	font-size: 1em;
-    padding-top: 15px;
+/*    padding-top: 15px;*/
 }
 
 .nonForm{
