--- a/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
@@ -445,6 +445,16 @@ body {
 	clear: both;
 }
 
+.sub_item input[type="radio"]{
+  margin-top:10px;
+
+}
+
+.sub_item input[type="checkbox"]{
+  margin-top:11px;
+
+}
+
 .sub_item label {
 	display: block;
 	float: left;
@@ -453,7 +463,8 @@ body {
 	position: relative;
 	text-align: right;
 	width: 36%;
-	font-size: 12px
+	font-size: 12px;
+    margin-top: 10px;
 }
 
 .titulo_tabla {
@@ -4782,6 +4793,32 @@ a {
 
 
 /* DESDE ACA */
+
+
+#titulo_detalle_rec{
+  border-radius: 5px 5px 5px 5px;
+  background-color:#fff;
+  
+
+}
+
+.div_detalle_recom{
+  color:#111;
+  border-radius: 5px 5px 5px 5px;
+    background-color:#fff;
+
+}
+
+.div_detalle_recom p{
+    font-weight:bold;
+    margin-left:10px;
+    border-radius: 5px 5px 5px 5px;
+
+}
+
+.div_detalle_recom p span{
+    font-weight:lighter;
+}
 
 
 .detalle_recom #fancybox-outer{
