mensaje automatico generado para el sql.rev126

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -47,7 +47,7 @@
 	
 	
 	<fieldset>
-		   <legend>[% "Detalles de Nivel 1 registro" | i18n %] [% id1 %]</legend>
+		   <legend>[% "Detalles de Nivel 1 registro" | i18n %] [% id1 %] ([% nivel1_template %])</legend>
 	
 		<div id="detalle1" class="detalle1">
 	        <div class="botones_detalle_nivel1">
@@ -88,7 +88,7 @@
 
         <div id="fieldset_grupo[% id2 %]">
 	        <fieldset>
-	            <legend class="trigger trigger_3_[% id2 %] click">[% "Detalles de Nivel 2 para registro" | i18n %] [% id2 %] [% "GRUPO" | i18n %] - [% tipo_documento %]</legend>
+	            <legend class="trigger trigger_3_[% id2 %] click">[% "Detalles de Nivel 2 para registro" | i18n %] [% id2 %] [% "GRUPO" | i18n %] - [% tipo_documento %] ([% nivel2_template %])</legend>
 	                <div id="grupo[% id2 %]" class="grupo[% id2 %]">
 
 		                <!-- NIVEL 2 -->
