--- a/intranet/htdocs/intranet-tmpl/circ/reservas_activas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/reservas_activas.tmpl
@@ -35,7 +35,7 @@ function consultar(){
 
 </script>
 
-<div class="titulos" >[% "Reservas" | i18n %]</div>
+<div class="titulos" >[% "Reservas activas" | i18n %]</div>
 
 <fieldset>
     <legend class="titulo_legend">[% "Tipo de reserva" | i18n %]</legend>
