--- a/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/DIF/includes/completo.css
@@ -1760,7 +1760,7 @@ input.file {
 }
 
 .contenedor_paginador {
-	width: 54%;
+	width: 70%;
 	margin: 0 auto;
 	padding: 4px;
 }
@@ -4424,6 +4424,20 @@ form.signin .subchck .remember {
     outline: medium none;
     padding: 3px 6px 3px 5px;
 }
+
+.static-links .search-form {
+    float: left;
+    margin: 6px 0.8em 0 0;
+    opacity: 1;
+    position: relative;
+}
+
+.static-links .search-form input, textarea, select{
+    font-family: verdana;
+    font-size: 12px;
+    margin: 0 0 10px;
+    max-width: 300px;}
+
 .search-form {
     float: left;
     margin: 6px 0 0;
@@ -4431,6 +4445,7 @@ form.signin .subchck .remember {
     opacity: 1;
     position: relative;
 }
+
 .search-form .search-query {
     background: none repeat scroll 0 0 #666666;
     border: 1px solid black;
