--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
@@ -63,6 +63,32 @@
     function updateSortable(){
         mostrarTabla();        
     }
+    
+    function eliminarTodoElCampo(campo){
+        objAH               = new AjaxHelper(updateEliminarTodoCampo);
+        objAH.debug         = true;
+        objAH.showOverlay   = true;  
+        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionINTRA/visualizacionIntraDB.pl";
+        objAH.tipoAccion    = 'ELIMINAR_TODO_EL_CAMPO';
+        objAH.nivel         = $("#eleccion_nivel").val();
+        objAH.ejemplar      = $("#tipo_nivel3_id").val();
+        
+        if (campo){
+        jConfirm(SEGURO_QUE_DESEA_ELIMINAR_TODO_EL_CAMPO,CATALOGO_ALERT_TITLE, function(confirmStatus){
+            if (confirmStatus){
+                objAH.campo         = campo;
+                objAH.sendToServer();
+            }
+        });
+    }
+    }
+    
+    function updateEliminarTodoCampo(responseText){
+        var Messages        = JSONstring.toObject(responseText);
+        setMessages(Messages);
+        mostrarTabla();
+    }
+    
 </script>
 <fieldset>
     <legend class="titulo_legend trigger click"><strong>[% "Agregar Visualizaci&oacute;n:" | i18n %]</strong></legend>
