--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -61,8 +61,8 @@
                                     [% FOREACH portadas_grupo %]
                                         [% IF loop.count < 4 %]
                                             [% IF portada_registro %]
-                                                <a class="fancylink" rel="group" href="/uploads/covers/[% portada_registro_big %]">
-                                                    <img name="cover"  VALUE="" BORDER=0 src="/uploads/covers/[% portada_registro %]" title="Portada">
+                                                <a class="fancylink" rel="group_[% grupo %]" href="/uploads/covers/[% portada_registro_big %]">
+                                                    <img name="cover"  src="/uploads/covers/[% portada_registro %]" title="Portada">
                                                 </a>
                                             [% ELSE %]
                                                   <img src="/uploads/covers/[% cat_ref_tipo_nivel3 %].png" 
@@ -74,12 +74,12 @@
                             [% ELSE %]
                                 [% IF portada_registro %]
                                     [% IF portada_registro_big %]
-                                        <a class="fancylink" rel="group" href="/uploads/covers/[% portada_registro_big %]">
+                                        <a class="fancylink" rel="group_[% grupo %]" href="/uploads/covers/[% portada_registro_big %]">
                                             <img alt="cover" src="/uploads/covers/[% portada_registro %]" title="Portada" />
                                         </a>
                                     [% ELSE %]
                                         [% IF portada_registro_medium %]
-                                            <a class="fancylink" rel="group" href="/uploads/covers/[% portada_registro_medium %]">
+                                            <a class="fancylink" rel="group_[% grupo %]" href="/uploads/covers/[% portada_registro_medium %]">
                                                 <img alt="cover" src="/uploads/covers/[% portada_registro %]" title="Portada" />
                                             </a>
                                         [% ELSE %]
