FIX Template ABM Catalogacion

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -33,6 +33,7 @@ $(document).ready( function() {
     params.id2              = [% id2 %];
     params.id3              = [% id3 %];
     TIENE_NIVEL_2           = [% tiene_nivel_2 %];
+    TEMPLATE_ACTUAL         = $('#tipo_nivel3_id').val();
 
     [% IF tipoAccion == "MODIFICAR_NIVEL_1" %]
         MODIFICAR               = 1;
