detectar url en post twitter

--- a/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
@@ -21,6 +21,21 @@
 
   function verificarCantCar(){
         var limit = 140; 
+//         var post=$('#post_twitter').val();
+// 
+// $(document).ready(function() {
+// 
+//     $('#click').click(function(){
+// 
+//  var one = document.getElementById('one');       
+//     one.value.match(/url ={([^}]*)}/,"");
+//     alert( RegExp.$1);
+// 
+// 
+//     })    
+// })
+
+
         if ($('#post_twitter').val().length > limit){
             $('#publicar_twitter').attr('disabled', 'disabled');
         } else {
