--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleTablaVisualizacionOpac.tmpl
@@ -1,9 +1,8 @@
-<script type="text/javascript" language="javascript" src="/includes/jquery/jquery-ui-1.8.13.sortable.min.js"></script>
 <script type="text/javascript" language="javascript">
     $(function() {
-	    $("#sortable").sortable({
+	    $("#sortable_subcampo").sortable({
             stop: function(event, ui) {
-                actualizarOrden($('#sortable').sortable('toArray'));
+                actualizarOrdenSubCampos($('#sortable').sortable('toArray'));
             }
         });
     });
@@ -46,23 +45,34 @@
               indicator : loaderPath,
 
         });
+        $('.nivel').editable('[% url_prefix %]/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl', { 
+              type      : 'text',
+              cancel    : CANCELAR,
+              submit    : OK,
+              tooltip   : EDITABLE_MSG,
+              placeholder: EDITABLE_MSG,
+              style   : 'display: inline',
+              submitdata : {token: "[% token %]", edit: 1, type: 'nivel'},
+              indicator : loaderPath,
+
+        });
     });
 </script>
 <fieldset>
-    <legend class="titulo_legend trigger click"><strong>[% "Configuraci&oacute;n de la Visualizaci&oacute;n:" | i18n %]</strong></legend>
-    <input type="checkbox" name="ordenar_campos" id="ordenar_campos"/>Agrupar por campo
-      <table class="tabla_datos" cellspacing=0 border="0" cellpadding=0 style="width:100%;">
+    <legend class="titulo_legend trigger click"><strong>[% "Configuraci&oacute;n de la Visualizaci&oacute;n de SubCampos:" | i18n %]</strong></legend>
+      <table class="tabla_datos_sub_campos" cellspacing=0 border="0" cellpadding=0 style="width:100%;">
             <thead>
                 <tr class="titulo_tabla_resultado">
                     <td>[% "Campo" | i18n %]</td>
                     <td>[% "Subcampo" | i18n %]</td>
                     <td>[% "Pre" | i18n %]</td>
-                    <td>[% "Vista en OPAC " | i18n %]</td>
-                    <td>[% "Post" | i18n %]</td>
-                    <td>[% "Eliminar" | i18n %]</td>
+                    <td>[% "Vista en OPAC" | i18n %]</td>
+                    <td>[% "Post " | i18n %]</td>
+                    <td>[% "Nivel" | i18n %]</td>
+                    <td>[% "Acciones" | i18n %]</td>
                 </tr>
             </thead>
-            <tbody id="sortable">
+            <tbody id="sortable_subcampo">
                 [% FOREACH campo IN visualizacion %]
                     <tr id="[% campo.getId %]" align="center">
                         <td>[% campo.getCampo %]</td>
@@ -70,6 +80,7 @@
                         <td class="pre" id="[% campo.id %]">[% campo.getPre %]</td>
                         <td class="editable" id="[% campo.id %]">[% campo.getVistaOpac %]</td>
                         <td class="post" id="[% campo.id %]">[% campo.getPost %]</td>
+                        <td class="nivel" id="[% campo.id %]">[% campo.getNivel %]</td>
                         <td align="center">
                             [% PERL %]
                                 print C4::AR::Filtros::to_Icon( text =>     "[% 'Eliminar Vista' | i18n %]",
