--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
@@ -8,14 +8,60 @@
         objAH.debug         = true;
         objAH.showOverlay   = true;  
         objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
-        objAH.tipoAccion    = 'MOSTRAR_TABLA_VISUALIZACION';
+        objAH.tipoAccion    = 'MOSTRAR_TABLA_CAMPO';
         objAH.ejemplar      = $("#tipo_nivel3_id").val();
+        objAH.nivel         = $("#eleccion_nivel").val();
         objAH.sendToServer();
     }
     
     function updateMostrarTabla(responseText){
         $("#tablaResultCampos").html(responseText);
         zebra("tabla_datos");  
+    }
+    
+    function actualizarOrdenCampo(){
+        objAH               = new AjaxHelper(updateSortable);
+        objAH.debug         = true;
+        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
+        objAH.showOverlay   = true;
+        objAH.tipoAccion    = "ACTUALIZAR_ORDEN_AGRUPANDO";
+        objAH.newOrderArray = $('#sortable').sortable('toArray');
+        objAH.sendToServer(); 
+    }
+    
+    function updateSortable(){
+        mostrarTabla();        
+    }
+    
+    var campo;
+    function editSubcampos(campo_parametro){
+        campo               = campo_parametro;
+        objAH               = new AjaxHelper(updateEditSubcampos);
+        objAH.debug         = true;
+        objAH.showOverlay   = true;  
+        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
+        objAH.tipoAccion    = 'MOSTRAR_TABLA_VISUALIZACION';
+        objAH.campo         = campo;
+        objAH.sendToServer();
+    }
+    
+    function updateEditSubcampos(responseText){
+        $("#tablaResultSubCampos").html(responseText);
+        zebra("tabla_datos_sub_campos");  
+    }
+    
+        function actualizarOrdenSubCampos(){
+        objAH               = new AjaxHelper(updateSortableSC);
+        objAH.debug         = true;
+        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
+        objAH.showOverlay   = true;
+        objAH.tipoAccion    = "ACTUALIZAR_ORDEN_SUBCAMPOS";
+        objAH.newOrderArray = $('#sortable_subcampo').sortable('toArray');
+        objAH.sendToServer(); 
+    }
+    
+    function updateSortableSC(){
+        editSubcampos(campo);        
     }
     
     function actualizarOrden(){
@@ -35,6 +81,31 @@
     
     function updateSortable(){
         mostrarTabla();        
+    }
+    
+    function eliminarTodoElCampo(campo){
+        objAH               = new AjaxHelper(updateEliminarTodoCampo);
+        objAH.debug         = true;
+        objAH.showOverlay   = true;  
+        objAH.url           = URL_PREFIX+"/catalogacion/visualizacionOPAC/visualizacionOpacDB.pl";
+        objAH.tipoAccion    = 'ELIMINAR_TODO_EL_CAMPO';
+        objAH.nivel         = $("#eleccion_nivel").val();
+        objAH.ejemplar      = $("#tipo_nivel3_id").val();
+        
+        if (campo){
+        jConfirm(SEGURO_QUE_DESEA_ELIMINAR_TODO_EL_CAMPO,CATALOGO_ALERT_TITLE, function(confirmStatus){
+            if (confirmStatus){
+                objAH.campo         = campo;
+                objAH.sendToServer();
+            }
+        });
+    }
+    }
+    
+    function updateEliminarTodoCampo(responseText){
+        var Messages        = JSONstring.toObject(responseText);
+        setMessages(Messages);
+        mostrarTabla();
     }
 </script>
 <fieldset>
@@ -86,3 +157,4 @@
 
 <div id="divAgregarModificarVisualizacion"></div>
 <div id="tablaResultCampos"></div>
+<div id="tablaResultSubCampos"></div>
