detalle historico en el ejemplar #3128

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplarCirculacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplarCirculacion.tmpl
@@ -46,7 +46,7 @@
                                   [% END %]
                               </td>
                               <td align='left' class="tarjetaId">
-                                    [% IF historico.responsable_ref == "Sistema" %]
+                                    [% IF historico.responsable == "Sistema" %]
 										Sistema 
 									[% ELSE %]
 									  [% PERL %]
