Ahora en Visualizacion INTRA/OPAC se agrego onChange al combo de Niveles

--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/visualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/visualizacionIntra.tmpl
@@ -44,7 +44,7 @@ $(document).ready(function() {
                                                 title   => "[% 'Buscar' | i18n %]",
                     ) ;
     [% END %]
-    <select name="eleccion_nivel" id="eleccion_nivel">
+    <select name="eleccion_nivel" id="eleccion_nivel" onchange="eleccionDeEjemplar();">
         <option value="1">Nivel 1</option>
         <option value="2">Nivel 2</option>
         <option value="3">Nivel 3</option>
