--- a/intranet/htdocs/intranet-tmpl/adquisiciones/listRecomendacionesResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/adquisiciones/listRecomendacionesResult.tmpl
@@ -1,7 +1,9 @@
+
 <fieldset class="resultados_busqueda">
     <legend class="titulo_legend trigger click">[% "Listado de Recomendaciones Activas:" | i18n %]</legend>
      <div class="datos_tabla_div_recom">
             <div class="resultados_consulta">[% "La cantidad de Recomendaciones es" | i18n %]: [% cantidad %]</div> 
+            <div class="contenedor_paginador">[% paginador %]</div>
 
             [% IF cantidad > 0 %]
 
