FIX Visualizacion INTRA y OPAC

--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
@@ -34,7 +34,7 @@ $(document).ready(function() {
 <div class="titulos" >[% 'Visualizaci&oacute;n de campos MARC en OPAC' | i18n %]</div>
 
 <fieldset>
-    <legend><strong>[% "Seleccione un tipo de ejemplar:" | i18n %]</strong></legend>
+    <legend><strong>[% "Seleccione el esquema a configurar:" | i18n %]</strong></legend>
     [% combo_perfiles %]
 
     [% PERL %]
