un fix mas del anterior

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialSanciones.tmpl
@@ -20,7 +20,7 @@
 		                Title='[% "Ordenar por Fecha Final" | i18n %]'>
 				    [% "Fecha Final" | i18n %]
 			    </td>
-		        <td class="click" onclick="ordenarHistorialSanciones('ref_tipo_sancion')" 
+		        <td class="click" onclick="ordenarHistorialSanciones('tipo_sancion')" 
                     Title='[% "Ordenar por Tipo de Sanci&oacute;n" | i18n %]'>
                     [% "Tipo de Sanci&oacute;n" | i18n %]
                 </td>
