--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
@@ -17,14 +17,15 @@
 		            [% "Autor" | i18n %]
 			    </td>
 		        <td>
-		                [% "Edici&oacute;n" | i18n %]
+                    [% "Edici&oacute;n" | i18n %]
 		        </td>
 		            <td class="click" onclick="ordenarHistorialPrestamos('barcode')" 
 		                Title='[% "Ordenar por C&oacute;digo" | i18n %]'>
 				    [% "C&oacute;digo" | i18n %]
 		        </td>
+			    <td>[% "Fecha" | i18n %]</td>
+			    <td>[% "Renovaci&oacute;n" | i18n %]</td>
 			    <td>[% "Pr&eacute;stamo" | i18n %]</td>
-		        <td>[% "Renovaci&oacute;n" | i18n %]</td>
                 <td>[% "Catidad de Renovaciones" | i18n %]</td>
 			    <td>[% "Vencimiento" | i18n %]</td>
 			    <td class="click" onclick="ordenarHistorialPrestamos('fecha_devolucion')" 
@@ -63,7 +64,7 @@
 				    [% END %]
 		    
 				    [% IF prestamo.nivel3.nivel2.getAnio_publicacion %]
-					    &nbsp;([% prestamo.nivel3.nivel2.getAnio_publicacion %])
+					   ([% prestamo.nivel3.nivel2.getAnio_publicacion %])
 		            [% END %]
 
 		    
@@ -79,28 +80,31 @@
 				    [% END %]	
 			    </td>
 			    <td>
-				    &nbsp;[% prestamo.getFecha_prestamo_formateada %]&nbsp;
+				    [% prestamo.getFecha_prestamo_formateada %]
 			    </td>
-			    <td>
+			     <td>
 		            [% IF prestamo.fecha_ultima_renovacion %]
-				        &nbsp;[% prestamo.getFecha_devolucion_formateada %]&nbsp;
+				        [% prestamo.getFecha_devolucion_formateada %]
 		            [% ELSE %]
 		                --------
 		            [% END %]
 			    </td>
+			    <td>
+				    [% prestamo.getTipo_prestamo %]
+			    </td>
                 <td>
-                    &nbsp;[% prestamo.renovaciones%]&nbsp;
+                    [% prestamo.renovaciones%]
                 </td>
 			    <td>
 		            [% IF estaVencido %]
-				        &nbsp;<span class="fecha_critica">[% prestamo.getFecha_vencimiento_formateada %]</span>&nbsp;
+				        <span class="fecha_critica">[% prestamo.getFecha_vencimiento_formateada %]</span>
 		            [% ELSE %]
-		                &nbsp;<span class="fecha_cumple">[% prestamo.getFecha_vencimiento_formateada %]</span>&nbsp;
+		                <span class="fecha_cumple">[% prestamo.getFecha_vencimiento_formateada %]</span>
 		            [% END %]
 			    </td>
 			    <td>
 		            [% IF prestamo.fecha_devolucion%]
-				        &nbsp;[% prestamo.getFecha_devolucion_formateada %]&nbsp;
+				       [% prestamo.getFecha_devolucion_formateada %]
 		            [% ELSE %]
 		                --------
 		            [% END %]
