--- a/intranet/htdocs/intranet-tmpl/admin/proximosFeriados.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/proximosFeriados.tmpl
@@ -1,5 +1,5 @@
        <fieldset>
-       <legend class="titulo_legend_resaltado">[% 'Pr&oacute;ximos 5 Feriados' | i18n %]</legend>
+       <legend class="titulo_legend_resaltado">[% 'Pr&oacute;ximos Feriados' | i18n %]</legend>
         <ul>
         [% FOREACH fecha IN proximos_feriados %]
             <li>[% fecha.getFecha %] <strong>[% fecha.getFeriado %]</strong></li>
