--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -15,7 +15,7 @@
 					<ul class="resumen_items">
 					<li class="columna_izq">[% "Ejemplares Disponibles:"|i18n %]<strong> [% disponibles %]</strong></li>
 					<li class="columna_der">[% "Reservas Realizadas:"|i18n %] 
-					       <strong> <a class="fancylink" href="[% url_prefix %]/circ/reservas_activas_edicion.pl?token=[% token %]&id2=[% id2 %]&tipoReserva=EJ">[% cantReservas %]</a></strong>
+					       <strong> <a class="fancylink" href="[% url_prefix %]/circ/reservas_activas_edicion.pl?token=[% token %]&id2=[% id2 %]&tipoReserva=EJ">[% cantReservasAsignadas %]</a></strong>
 			        </li>
 					<li class="columna_izq">[% "Reservas en Espera:"|i18n %] 
 					       <strong> <a class="fancylink" href="[% url_prefix %]/circ/reservas_activas_edicion.pl?token=[% token %]&id2=[% id2 %]&tipoReserva=GR">[% cantReservasEnEspera %]</a></strong>
