FIX Detalle OPAC

--- a/opac/htdocs/opac-tmpl/opac-detail.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-detail.tmpl
@@ -2,6 +2,7 @@
 
 <script>
 
+// TODO esto on usa el helper de ajax
 	function MARCDetail(id3, IdDivDetalle, IdDivMARC){
 
 		var params= 'id3=' + id3;
