meranizacion de impresion de comprobante prestamo y devolucion

--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -1,9 +1,12 @@
-<html>
+<!--<html>
 <head>
   <meta http-equiv="Content-Tipo" content="text/html; charset=UTF-8">
-</head>
-<body onload="javascript:window.print();window.close();">
+</head>-->
+<!--<body onload="javascript:window.print();window.close();">-->
+
 <!-- LO QUE ESTA COMENTADO ES COMO ESTA ANTES!!!!!!! -->
+
+
 
 <table width="100%" border="1px">
   <tbody>
@@ -184,5 +187,5 @@
     </td>
   </tr>
 </table>-->
-</body>
-</html>
+<!--</body>
+</html>-->
