--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -8,6 +8,8 @@
 <script type="text/javascript" src="/intranet-tmpl/includes/usuarios/usuariosReales-min.js"></script>
 <script type="text/javascript" src="/includes/jquery/jquery.fileUploader-min.js"></script>
 <script type="text/javascript" src="/includes/jquery/jquery.livequery-min.js"></script>
+<script type="text/javascript" src="/includes/jquery/fancybox/jquery.fancybox.js"></script>
+
 
 [% INCLUDE "WindowHelper.inc" %] 
 [% INCLUDE "ChangePasswordHelper.inc"  %]
@@ -295,6 +297,15 @@ $(document).ready(function(){
 	USUARIO.text    = "[% socio_modificar.persona.getApeYNom %]";
     USUARIO.ID      = '[% socio_modificar.getNro_socio %]';
 	detalleUsuario();
+  
+//     $('#fancybox_ticket').modal({   containerCss:{
+//             backgroundColor:"#fff",
+//     //         borderColor:"#0063dc",
+//             height:420,
+//             padding:0,
+//             width:650
+//         },
+//     );
 
     makeToggle('toggle_container_block','trigger1',mostrarHistorialDePrestamos, 'historialPrestamos',true);
     makeToggle('toggle_container_block','trigger2',mostrarHistorialDeSanciones, 'historialSanciones',true);
@@ -347,6 +358,7 @@ $(document).ready(function(){
             <div id="historialSanciones" class="toggle_container_block" style="display:none"></div>
         </fieldset>
     </div>
+    <div class="fancybox_ticket" id="fancybox_ticket"></div> 
 </div>
 
 [% INCLUDE "intranet-bottom.inc" %]
