ticket #3109, le di estilos al cursos al ordenar los estantes

--- a/opac/htdocs/opac-tmpl/temas/DIF/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DIF/includes/opac.css
@@ -31,6 +31,10 @@ body input[type="text"] {
     clear: none;
 }
 
+.click {
+    cursor: pointer;
+}
+
 .page-container {
     border: solid 1px rgb(150, 150, 150);
 }
